versions/v2.8/modules/en/pages/rancher-admin/cli/kubectl.adoc
= kubectl Utility
:revdate: 2024-09-30
:page-revdate: {revdate}

== kubectl

Interact with Rancher using kubectl.

=== kubectl Utility

Install the `kubectl` utility. See https://kubernetes.io/docs/tasks/tools/install-kubectl/[install kubectl].

Configure kubectl by visiting your cluster in the Rancher Web UI, clicking on `Kubeconfig`, copying contents, and putting them into your `~/.kube/config` file.

Run `kubectl cluster-info` or `kubectl get pods` successfully.

=== Authentication with kubectl and kubeconfig Tokens with TTL

_Requirements_

If admins have xref:api/api-tokens.adoc#_disable_tokens_in_generated_kubeconfigs[kubeconfig token generation turned off], the kubeconfig file requires the xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI] to be present in your PATH when you run `kubectl`. Otherwise, you'll see an error like:
`Unable to connect to the server: getting credentials: exec: exec: "rancher": executable file not found in $PATH`.

This feature enables kubectl to authenticate with the Rancher server and get a new kubeconfig token when required. The following auth providers are currently supported:

. Local
. Active Directory (LDAP only)
. FreeIPA
. OpenLDAP
. SAML providers: Ping, Okta, ADFS, Keycloak, Shibboleth
. Azure AD

When you first run kubectl, for example, `kubectl get pods`, you are prompted to pick an auth provider and log in with the Rancher server. The kubeconfig token is cached in the path where you run kubectl under `./.cache/token`. This token is valid until xref:api/api-tokens.adoc#_disable_tokens_in_generated_kubeconfigs[it expires], or xref:api/api-tokens.adoc#_deleting_tokens[gets deleted from the Rancher server]. Upon expiration, you must log in with the Rancher server again to run the `kubectl get pods` command.
